--- a/gradle.properties
+++ b/gradle.properties
@@ -45,6 +45,7 @@ LIB_GRAPHQL_JAVA_VER = 16.2
 LIB_GRAPHQL_VER = 11.1.0
 LIB_GRAPHQL_JAVA_TOOLS_VER = 11.0.1
 LIB_SPRING_BOOT_VER = 2.5.1
+LIB_LOMBOK_MAPSTRUCT_BINDING_VER = 0.2.0
 
 ### test
 LIB_GROOVY_VER = 2.4.7
