--- a/core/src/main/resources/error_codes.properties
+++ b/core/src/main/resources/error_codes.properties
@@ -1,3 +1,4 @@
 java.lang.Exception=000000
 # \u9A8C\u8BC1\u5F02\u5E38\u9ED8\u8BA4\u7801
 org.jfantasy.framework.error.ValidationException=420000
+org.jfantasy.framework.spring.mvc.error.NotFoundException=420001
