--- a/settings.gradle
+++ b/settings.gradle
@@ -12,10 +12,9 @@ pluginManagement {
 }
 
 rootProject.name = 'jfantasy-framework'
-include ":jfantasy-core", ":jfantasy-storage", ":jfantasy-graphql", ":jfantasy-desensitize", ":jfantasy-example"
+include ":jfantasy-core", ":jfantasy-graphql", ":jfantasy-desensitize", ":jfantasy-example"
 
 project(':jfantasy-core').projectDir = "$rootDir/core" as File
-project(':jfantasy-storage').projectDir = "$rootDir/storage" as File
 project(':jfantasy-graphql').projectDir = "$rootDir/graphql" as File
 project(':jfantasy-desensitize').projectDir = "$rootDir/desensitize" as File
 project(':jfantasy-example').projectDir = "$rootDir/example" as File
