fix: 修复 FileUtil getMimeType 方法
实现参考：https://blog.csdn.net/Big_Blogger/article/details/107728976

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -48,3 +48,7 @@ dependencies {
 	testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testImplementation libs['test']
 }
+
+repositories {
+    mavenCentral()
+}
