--- a/gradle.properties
+++ b/gradle.properties
@@ -31,7 +31,7 @@ LIB_HTMLCLEANER_VER = 2.8
 LIB_BCPROV_VER = 1.46
 LIB_OGNL_VER = 3.1.2
 LIB_JPINYIN_VER = 1.1.8
-LIB_MIME_UTIL_VER = 2.1.3
+LIB_TIKA_VER = 2.3.0
 LIB_UNIREST_VER = 1.4.9
 
 ###
