--- a/example/src/main/resources/application-dev.yml
+++ b/example/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ spring:
     name: server
   datasource:
     name: datasource
-    url: jdbc:mysql://localhost:3306/demo?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://dev.local:3306/demo?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
     username: root
     password: yV2jJxvNs8BD
     druid:
@@ -11,25 +11,12 @@ spring:
       initialSize: 10
       maxWait: 60000
       minIdle: 1
-#  redis:
-#    database: 0
-#    host: dc3.docker.asany.cn
-#    port: 30379
-#    password: Y0HfNA{PdjSINZyy
+  redis:
+    host: dev.local
+    port: 6379
+    password: sOmE_sEcUrE_pAsS
 
 graphql:
   servlet:
     mapping: /graphql
     enabled: true
-    websocket:
-      enabled: true
-
-#es:
-#  clustername:
-#    cluster_elasticsearch
-#  ip:
-#    192.168.3.35
-#  port:
-#    30300
-#role:
-#  name: 会务管理员
