fix: 修复 search 模块的额 rebuild task

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs = -Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryE
 SOURCE_COMPATIBILITY = 1.8
 TARGET_COMPATIBILITY = 1.8
 
-kotlin.version=1.3.70
+#kotlin.version=1.3.70
 
 ### Plugin
 PLUGIN_SONARQUBE_VER = 2.7.1
