--- a/example/build.gradle
+++ b/example/build.gradle
@@ -33,6 +33,7 @@ dependencyManagement {
 dependencies {
 	implementation project(":jfantasy-core")
 	implementation project(":jfantasy-graphql")
+    implementation project(":jfantasy-search")
 	implementation "org.springframework.boot:spring-boot-starter-data-redis"
 	implementation "org.mapstruct:mapstruct:${LIB_MAPSTRUCT_VER}"
 	annotationProcessor "org.mapstruct:mapstruct-processor:$LIB_MAPSTRUCT_VER"
