fix: 将注解改成与 spring-boot-data-elasticsearch 相似

--- a/example/src/main/resources/application-dev.yml
+++ b/example/src/main/resources/application-dev.yml
@@ -15,6 +15,14 @@ spring:
     host: dev.local
     port: 6379
     password: sOmE_sEcUrE_pAsS
+  cuckoo:
+    rebuild: true
+    elasticsearch:
+      client:
+        url: https://es.thuni-h.com:9200
+        apiKey: RWpsR3dvQUJINEtJY2FvWGJGMXg6QkNXZzJ0X01UY2VocFNBQUVXNGExQQ==
+        ssl:
+          certificate-path: /Users/limaofeng/Downloads/ca/ca.crt
 
 graphql:
   servlet:
