--- a/search/build.gradle
+++ b/search/build.gradle
@@ -7,15 +7,20 @@ configurations {
 apply plugin: 'java-library'
 apply plugin: 'jacoco'
 
+compileJava.inputs.files(processResources)
+
 dependencies {
 	implementation project(":jfantasy-commons")
+    implementation project(":jfantasy-search-annotations")
 	implementation "co.elastic.clients:elasticsearch-java:${LIB_ELASTICSEARCH_VER}"
-    implementation 'jakarta.json:jakarta.json-api:2.1.0'
-    compileOnly "org.hibernate:hibernate-core:5.4.32.Final"
-    compileOnly "org.springframework.data:spring-data-jpa"
+	implementation "org.springframework.boot:spring-boot-starter-data-elasticsearch"
+	implementation 'jakarta.json:jakarta.json-api:2.1.0'
+	compileOnly "org.hibernate:hibernate-core:5.4.32.Final"
+	compileOnly "org.springframework.data:spring-data-jpa"
 	compileOnly "org.springframework:spring-context"
 	compileOnly "org.springframework.boot:spring-boot-autoconfigure"
 	compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
