--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 
 logging.config=classpath:logback.xml
-logging.path=/Users/limaofeng/framework/core/build/logs
+logging.file.path=/Users/limaofeng/framework/core/build/logs
 # datasource config
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/core?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
