--- a/example/build.gradle
+++ b/example/build.gradle
@@ -34,8 +34,11 @@ dependencies {
 	implementation project(":jfantasy-core")
 	implementation project(":jfantasy-graphql")
 	implementation project(":jfantasy-search")
+	implementation "jakarta.json:jakarta.json-api:2.1.0"
 	implementation "org.springframework.boot:spring-boot-starter-data-redis"
 	implementation "org.mapstruct:mapstruct:${LIB_MAPSTRUCT_VER}"
+	testCompileOnly "us.codecraft:webmagic-core:0.7.5"
+    testCompileOnly "us.codecraft:webmagic-extension:0.7.5"
 	annotationProcessor "org.mapstruct:mapstruct-processor:$LIB_MAPSTRUCT_VER"
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${LIB_SPRING_BOOT_VER}"
 	testImplementation "com.graphql-java-kickstart:graphql-spring-boot-starter-test:$LIB_GRAPHQL_VER"
