--- a/search/build.gradle
+++ b/search/build.gradle
@@ -1,28 +1,30 @@
 description = " 集成 elastic "
 
 configurations {
-	compile.exclude module: "tomcat-jdbc"
+    compile.exclude module: "tomcat-jdbc"
 }
 
 apply plugin: 'java-library'
 apply plugin: 'jacoco'
 
 dependencies {
-	api project(":jfantasy-commons")
-	implementation "co.elastic.clients:elasticsearch-java:${LIB_ELASTICSEARCH_VER}"
-	implementation "jakarta.json:jakarta.json-api:2.1.0"
-	compileOnly "org.hibernate:hibernate-core:5.4.32.Final"
-	compileOnly "org.springframework.data:spring-data-jpa"
-	compileOnly "org.springframework:spring-context"
-	compileOnly "org.springframework.boot:spring-boot-autoconfigure"
-	compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
-	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-	annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
-	testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
-	testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
-	testImplementation libs['test']
+    api project(":jfantasy-commons")
+    implementation "co.elastic.clients:elasticsearch-java:${LIB_ELASTICSEARCH_VER}"
+    implementation "jakarta.json:jakarta.json-api:2.1.0"
+    compileOnly "org.hibernate:hibernate-core:5.4.32.Final"
+    compileOnly "org.springframework.data:spring-data-jpa"
+    compileOnly "org.springframework:spring-context"
+    compileOnly "org.springframework.boot:spring-boot-autoconfigure"
+    compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    testImplementation libs['springBoot']
+    testImplementation libs['orm']
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    testImplementation libs['test']
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
