--- a/search/src/test/resources/application-test.yml
+++ b/search/src/test/resources/application-test.yml
@@ -1,6 +1,17 @@
 spring:
-  elasticsearch:
-    rest:
-      uris: 101.132.33.180:9200
-      username: elastic
-      password: password
+  datasource:
+    name: datasource
+    url: jdbc:mysql://dev.local:3306/demo?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+    username: root
+    password: yV2jJxvNs8BD
+  jpa:
+    hibernate:
+      ddl-auto: update
+  cuckoo:
+    rebuild: false
+    elasticsearch:
+      client:
+        url: https://es.thuni-h.com:9200
+        api-key: RWpsR3dvQUJINEtJY2FvWGJGMXg6QkNXZzJ0X01UY2VocFNBQUVXNGExQQ==
+        ssl:
+          certificate-path: /Users/limaofeng/Downloads/ca/ca.crt
