feat: 完成查询模块的文档同步新增/修改/删除功能

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,7 @@ LIB_APACHE_COMMONS_LANG3_VER = 3.7
 
 # Elasticsearch
 LIB_ELASTICSEARCH_VER = 8.2.0
+LIB_JAKARTA_VAR = 2.1.0
 
 ### common
 LIB_CGLIB_VER = 3.3.0
