feat: graphql 空排序实现
减少使用时的空判断

--- a/gradle/spotless.gradle
+++ b/gradle/spotless.gradle
@@ -8,6 +8,11 @@ spotless {
         indentWithTabs()
         endWithNewline()
     }
+    format 'styling', {
+        target 'src/*/resources/**/*.graphqls'
+
+        prettier('2.4.1').config(['tabWidth': 2])
+    }
     java {
         target 'src/*/java/**/*.java'
 
