fix: 为 connection 对象设置分页信息

--- a/example/src/main/resources/application-dev.yml
+++ b/example/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
     port: 6379
     password: sOmE_sEcUrE_pAsS
   cuckoo:
-    rebuild: true
+    enable: false
     elasticsearch:
       client:
         url: https://es.thuni-h.com:9200
