feat: 为 ES 配置添加开关
禁用和未配置时，不加载 ES 逻辑

--- a/search/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/search/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -21,6 +21,12 @@
       "sourceType": "org.jfantasy.autoconfigure.properties.CuckooProperties"
     },
     {
+      "name": "spring.cuckoo.enable",
+      "type": "java.lang.Boolean",
+      "description": "启用与禁用.",
+      "sourceType": "org.jfantasy.autoconfigure.properties.CuckooProperties"
+    },
+    {
       "name": "spring.cuckoo.batch-size",
       "type": "java.lang.Integer",
       "description": "启动重建索引已经其他操作时，最大处理的数据量.",
