--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -48,7 +48,10 @@ ext {
                     "com.github.stuxuhai:jpinyin:${LIB_JPINYIN_VER}"
             ],
             test         : [
-                    "org.springframework.boot:spring-boot-starter-test",
+                    dependencies.create("org.springframework.boot:spring-boot-starter-test") {
+                        exclude group: "com.vaadin.external.google", module: "android-json"
+
+                    },
                     "org.codehaus.groovy:groovy-all:${LIB_GROOVY_VER}",
                     "org.junit.jupiter:junit-jupiter",
                     "org.junit.jupiter:junit-jupiter-api"
