--- a/gradle.properties
+++ b/gradle.properties
@@ -12,11 +12,11 @@ PLUGIN_JREBEL_VER = 1.1.8
 PLUGIN_SPRING_DEPENDENCY_MANAGEMENT_VER = 1.0.8.RELEASE
 
 ### orm
-LIB_SPRING_DRUID_VER = 1.1.21
-LIB_SPRING_MYBATIS_VER = 2.1.1
+LIB_SPRING_DRUID_VER = 1.2.9
+LIB_SPRING_MYBATIS_VER = 2.2.2
 
 ### SpringBoot
-LIB_SPRING_BOOT_VER = 2.5.1
+LIB_SPRING_BOOT_VER = 2.7.0
 
 ### commons
 LIB_APACHE_COMMONS_TEXT_VER = 1.6
@@ -49,6 +49,9 @@ LIB_GRAPHQL_JAVA_VER = 16.2
 LIB_GRAPHQL_VER = 12.0.0
 LIB_GRAPHQL_JAVA_TOOLS_VER = 11.1.2
 LIB_LOMBOK_MAPSTRUCT_BINDING_VER = 0.2.0
+
+##
+LIB_WEBMAGIC_VER = 0.7.5
 
 ### test
 LIB_GROOVY_VER = 2.4.7
