chore: 为了解决 CI 时间过长，禁用 search 模块的测

--- a/search/build.gradle
+++ b/search/build.gradle
@@ -7,6 +7,8 @@ configurations {
 apply plugin: 'java-library'
 apply plugin: 'jacoco'
 
+tasks.withType(Test) { enabled = false }
+
 dependencies {
 	api project(":jfantasy-commons")
 	implementation "co.elastic.clients:elasticsearch-java:${LIB_ELASTICSEARCH_VER}"
