--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs = -Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryE
 SOURCE_COMPATIBILITY = 1.8
 TARGET_COMPATIBILITY = 1.8
 
-#kotlin.version=1.3.70
+kotlin.version=1.6.21
 
 ### Plugin
 PLUGIN_SONARQUBE_VER = 2.7.1
@@ -44,11 +44,13 @@ LIB_UNIREST_VER = 1.4.9
 ###
 LIB_MAPSTRUCT_VER = 1.4.2.Final
 LIB_LOMBOK_VER = 1.18.16
-LIB_GRAPHQL_SCALARS_VER = 17.0
-LIB_GRAPHQL_JAVA_VER = 16.2
-LIB_GRAPHQL_VER = 12.0.0
-LIB_GRAPHQL_JAVA_TOOLS_VER = 11.1.2
 LIB_LOMBOK_MAPSTRUCT_BINDING_VER = 0.2.0
+
+### graphql
+LIB_GRAPHQL_SCALARS_VER = 18.1
+LIB_GRAPHQL_VER = 12.0.0
+LIB_GRAPHQL_JAVA_VER = 18.1
+LIB_GRAPHQL_JAVA_TOOLS_VER = 12.1.0
 
 ##
 LIB_WEBMAGIC_VER = 0.7.5
