--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -5,17 +5,16 @@ spring:
   main:
     allow-bean-definition-overriding: true
   datasource:
-    druid:
-      timeBetweenEvictionRunsMillis: 60000
-      minEvictableIdleTimeMillis: 300000
-      validationQuery: select 'x'
-      testWhileIdle: true
-      testOnBorrow: true
-      testOnReturn: true
-      poolPreparedStatements: true
-      maxOpenPreparedStatements: 20
-      connection-init-sqls:
-        - set names utf8mb4
+    hikari:
+      connection-timeout: 30000
+      minimum-idle: 50
+      maximum-pool-size: 200
+      auto-commit: true
+      idle-timeout: 600000
+      pool-name: DateSourceHikariCP
+      max-lifetime: 1800000
+      connection-test-query: SELECT 1
+      connection-init-sql: set names utf8mb4
   redis:
     jedis:
       pool:
@@ -23,7 +22,7 @@ spring:
         max-wait: 300
         max-idle: 100
         min-idle: 100
-      timeout: 1000
+    connect-timeout: 1000
   jpa:
     hibernate:
       ddl-auto: update
@@ -67,6 +66,11 @@ spring:
     job-store-type: jdbc
     jdbc:
       initialize-schema: never
+
+management:
+  health:
+    elasticsearch:
+      enabled: false
 
 graphql:
   servlet:
