fix: 优化自定义序列缓存池大小的配置
更改为 spring.sequence.pool-size

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	api "com.jayway.jsonpath:json-path"
 	compileOnly "org.springframework.boot:spring-boot-starter-data-redis"
 	compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
