--- a/core/src/main/resources/plugin.properties
+++ b/core/src/main/resources/plugin.properties
@@ -1,2 +1,3 @@
 # mybatis config
 mybatis.mapper-locations=classpath*:org/jfantasy/**/dao/*-Mapper.xml
+mybatis.type-aliases-package=org.jfantasy.framework.dao.mybatis.keygen.bean
