--- a/gradle.properties
+++ b/gradle.properties
@@ -50,7 +50,7 @@ LIB_LOMBOK_MAPSTRUCT_BINDING_VER = 0.2.0
 
 ### graphql
 LIB_GRAPHQL_SCALARS_VER = 18.1
-LIB_GRAPHQL_VER = 12.0.0
+LIB_GRAPHQL_BOOT_VER = 12.0.0
 LIB_GRAPHQL_JAVA_VER = 18.1
 LIB_GRAPHQL_JAVA_TOOLS_VER = 12.1.0
 
