--- a/graphql/build.gradle
+++ b/graphql/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'jacoco'
 
 dependencies {
 	implementation project(":jfantasy-core")
-	api dependencies.create("com.graphql-java-kickstart:graphql-spring-boot-starter:${LIB_GRAPHQL_VER}"){
+	api dependencies.create("com.graphql-java-kickstart:graphql-spring-boot-starter:${LIB_GRAPHQL_BOOT_VER}"){
 		exclude group: "com.graphql-java-kickstart", module: "graphql-java-tools"
 		exclude group: "com.graphql-java", module: "graphql-java"
 	}
@@ -17,6 +17,9 @@ dependencies {
 	api "com.graphql-java-kickstart:graphql-java-tools:$LIB_GRAPHQL_JAVA_TOOLS_VER"
 	api "com.graphql-java:graphql-java-extended-scalars:$LIB_GRAPHQL_SCALARS_VER"
 	api "com.jayway.jsonpath:json-path"
+	api 'org.springframework.boot:spring-boot-starter-websocket'
+	api "io.reactivex.rxjava2:rxjava"
+	api "io.projectreactor:reactor-core"
 	compileOnly "org.springframework:spring-orm"
 	compileOnly "org.springframework.data:spring-data-jpa"
 	compileOnly 'org.aspectj:aspectjweaver'
