--- a/example/build.gradle
+++ b/example/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	implementation "jakarta.json:jakarta.json-api:${LIB_JAKARTA_VAR}"
 	implementation "org.springframework.boot:spring-boot-starter-data-redis"
 	implementation "org.mapstruct:mapstruct:${LIB_MAPSTRUCT_VER}"
+	implementation "io.reactivex.rxjava2:rxjava"
 	annotationProcessor "org.mapstruct:mapstruct-processor:$LIB_MAPSTRUCT_VER"
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${LIB_SPRING_BOOT_VER}"
 	testImplementation "com.graphql-java-kickstart:graphql-spring-boot-starter-test:$LIB_GRAPHQL_BOOT_VER"
