--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ kotlin.version=1.6.21
 ### Plugin
 PLUGIN_SONARQUBE_VER = 2.7.1
 PLUGIN_JREBEL_VER = 1.1.8
-PLUGIN_SPRING_DEPENDENCY_MANAGEMENT_VER = 1.0.11.RELEASE
+PLUGIN_SPRING_DEPENDENCY_MANAGEMENT_VER = 1.1.0
 
 ### orm
 LIB_SPRING_MYBATIS_VER = 2.2.2
@@ -18,7 +18,7 @@ LIB_SPRING_MYBATIS_VER = 2.2.2
 LIB_DATASOURCE_PROXY_VER = 1.7
 
 ### SpringBoot
-LIB_SPRING_BOOT_VER = 2.7.0
+LIB_SPRING_BOOT_VER = 2.7.7
 
 ### commons
 LIB_APACHE_COMMONS_TEXT_VER = 1.6
