--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	testCompileOnly "org.projectlombok:lombok"
 	testAnnotationProcessor "org.projectlombok:lombok"
 	testImplementation libs['test']
+    testCompileOnly 'jakarta.servlet:jakarta.servlet-api'
 }
 
 repositories {
