--- a/core/build.gradle
+++ b/core/build.gradle
@@ -30,8 +30,11 @@ dependencies {
 	testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testImplementation libs['test']
+	testImplementation files('/Library/Java/JavaVirtualMachines/jdk1.8.0_144.jdk/Contents/Home/lib/tools.jar')
 }
 
 repositories {
 	mavenCentral()
 }
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
