--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -8,14 +8,15 @@ apply plugin: 'java-library'
 apply plugin: 'jacoco'
 
 dependencies {
-	// unirest
+	// noinspection DependencyNotationArgument
 	api libs['unirest']
-	// commons
+	// noinspection DependencyNotationArgument
 	api libs['commons']
-	// ognl and cglib
+	// noinspection DependencyNotationArgument
 	api libs['third-party']
 	api 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 	api "com.jayway.jsonpath:json-path"
+	// noinspection DependencyNotationArgument
 	compileOnly libs['orm']
 	compileOnly "org.springframework.boot:spring-boot-starter-data-jpa"
 	compileOnly "org.springframework.boot:spring-boot-starter-data-redis"
@@ -23,6 +24,7 @@ dependencies {
 	annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+	// noinspection DependencyNotationArgument
 	testImplementation libs['test']
 }
 
