--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,16 +10,22 @@ apply plugin: 'jacoco'
 dependencies {
 	api project(":jfantasy-commons")
 	// spring boot
+	//noinspection DependencyNotationArgument
 	api libs['springBoot']
 	// quartz
+	//noinspection DependencyNotationArgument
 	api libs['quartz']
 	// orm
+	//noinspection DependencyNotationArgument
 	api libs['orm']
 	// unirest
+	//noinspection DependencyNotationArgument
 	api libs['unirest']
 	// commons
+	//noinspection DependencyNotationArgument
 	api libs['commons']
 	// ognl and cglib
+	//noinspection DependencyNotationArgument
 	api libs['third-party']
 	api 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 	api "com.jayway.jsonpath:json-path"
@@ -29,6 +35,7 @@ dependencies {
 	annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+	//noinspection DependencyNotationArgument
 	testImplementation libs['test']
 	testImplementation files('/Library/Java/JavaVirtualMachines/jdk1.8.0_144.jdk/Contents/Home/lib/tools.jar')
 }
@@ -36,5 +43,3 @@ dependencies {
 repositories {
 	mavenCentral()
 }
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
