refactor: 重构与优化

--- a/build.gradle
+++ b/build.gradle
@@ -103,6 +103,10 @@ subprojects {
         }
     }
 
+    tasks.withType(JavaCompile).configureEach {
+        options.compilerArgs << '-Xlint:unchecked'
+    }
+
     tasks.withType(Test).configureEach {
         useJUnitPlatform()
 
