--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.properties.hibernate.jdbc.batch_size=500
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
+
+spring.cache.advance.bean-names=languageService
