--- a/core/build.gradle
+++ b/core/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	api 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 	api "com.jayway.jsonpath:json-path"
 	compileOnly "org.springframework.boot:spring-boot-starter-data-redis"
+	compileOnly "org.apache.shardingsphere:sharding-jdbc-core:4.1.1"
 	compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
